--- a/index.html
+++ b/index.html
@@ -6,8 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Surveyor Desk</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <script src="scripts/App.js" type="module" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
   </head>
   <body>
-    <script src="scripts/App.js" type="module"></script>
+    <header id="top-bar">
+      <h1><a href="index.html">Surveyor Desk</a></h1>
+    </header>
+    <div id="content-wrapper">
+      <nav>
+        <ul>
+          <li>
+            <i class="bi bi-calculator"></i><a href="">Obliczenia</a
+            ><i class="bi bi-chevron-down" id="arrow-icon"></i>
+          </li>
+          <li>
+            <i class="bi bi-columns"></i
+            ><a href="transformation">Transformacja układów</a>
+          </li>
+          <li>
+            <i class="bi bi-card-list"></i><a href="points">Baza punktów</a>
+          </li>
+          <li>
+            <i class="bi bi-percent"></i
+            ><a href="calc-angles">Zamiana miar kątowych</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="display-area">
+        <section id="about-project">
+          <h2>Witaj w aplikacji Surveyor Desk</h2>
+          <p>Tekst o aplikacji, czym jest, dlaczego ją stworzyłem.</p>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
