--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Surveyor Desk</title>
     <link rel="stylesheet" href="styles/main.css" />
-    <script src="scripts/App.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,28 +16,42 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
+    <script src="scripts/clickHandlers.js" type="module" defer></script>
   </head>
   <body>
     <header id="top-bar">
-      <h1><a href="index.html">Surveyor Desk</a></h1>
+      <h1>
+        <i class="bi bi-compass"></i><a href="index.html">Surveyor Desk</a>
+      </h1>
     </header>
     <div id="content-wrapper">
       <nav>
+        <i class="bi bi-list"></i>
         <ul>
-          <li>
-            <i class="bi bi-calculator"></i><a href="">Obliczenia</a
-            ><i class="bi bi-chevron-down" id="arrow-icon"></i>
+          <li class="list-extendable">
+            <div class="item-head">
+              <i class="bi bi-calculator"></i><a href="#">Obliczenia</a
+              ><i class="bi bi-chevron-down arrow-icon"></i>
+            </div>
+            <div class="item-content">
+              <ul class="calc-list">
+                <li>Azymut na podstawie dwóch punktów</li>
+                <li>Długość odcinka ze współrzędnych</li>
+                <li>Kąt poziomy ze współrzędnych</li>
+              </ul>
+            </div>
           </li>
+
           <li>
             <i class="bi bi-columns"></i
-            ><a href="transformation">Transformacja układów</a>
+            ><a href="#transformation">Transformacja układów</a>
           </li>
           <li>
-            <i class="bi bi-card-list"></i><a href="points">Baza punktów</a>
+            <i class="bi bi-bullseye"></i><a href="#points">Baza punktów</a>
           </li>
           <li>
             <i class="bi bi-percent"></i
-            ><a href="calc-angles">Zamiana miar kątowych</a>
+            ><a href="#calc-angles">Zamiana miar kątowych</a>
           </li>
         </ul>
       </nav>
