--- a/pages/add-point.html
+++ b/pages/add-point.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Surveyor Desk</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="/surveyorDesk/styles/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,12 +16,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
-    <script src="scripts/clickHandlers.js" type="module" defer></script>
+    <script
+      src="/surveyorDesk/scripts/clickHandlers.js"
+      type="module"
+      defer
+    ></script>
   </head>
   <body>
     <header id="top-bar">
       <h1>
-        <i class="bi bi-compass"></i><a href="index.html">Surveyor Desk</a>
+        <i class="bi bi-compass"></i
+        ><a href="/surveyorDesk/index.html">Surveyor Desk</a>
       </h1>
     </header>
     <div id="content-wrapper">
@@ -35,7 +40,7 @@
             </div>
             <div class="item-content">
               <ul class="calc-list">
-                <a href="pages/azimuth.html"
+                <a href="/surveyorDesk/pages/azimuth.html"
                   ><li>Azymut na podstawie dwóch punktów</li></a
                 >
                 <a href="#"><li>Długość odcinka ze współrzędnych</li></a>
@@ -56,14 +61,22 @@
           </li>
           <li>
             <i class="bi bi-plus"></i
-            ><a href="pages/add-point.html">Dodaj punkt</a>
+            ><a href="/surveyorDesk/pages/add-point.html">Dodaj punkt</a>
           </li>
         </ul>
       </nav>
       <div class="display-area">
-        <section id="about-project">
-          <h2>Witaj w aplikacji Surveyor Desk</h2>
-          <p>Tekst o aplikacji, czym jest, dlaczego ją stworzyłem.</p>
+        <section id="add-point">
+          <h2>Dodaj nowy punkt do bazy</h2>
+          <div class="point-details">
+            <label for="point-name">Nazwa punktu</label
+            ><input type="text" id="point-name" />
+            <label for="coord-x">Współrzędna X</label
+            ><input type="text" id="coord-x" />
+            <label for="coord-y">Współrzędna Y</label
+            ><input type="text" id="coord-y" />
+            <button id="add-point">DODAJ PUNKT DO BAZY</button>
+          </div>
         </section>
       </div>
     </div>
