--- a/pages/add-point.html
+++ b/pages/add-point.html
@@ -43,8 +43,9 @@
                 <a href="/surveyorDesk/pages/azimuth.html"
                   ><li>Azymut na podstawie dwóch punktów</li></a
                 >
-                <a href="#"><li>Długość odcinka ze współrzędnych</li></a>
-                <a href="#"><li>Kąt poziomy ze współrzędnych</li></a>
+                <a href="distance.html"
+                  ><li>Długość odcinka ze współrzędnych</li></a
+                >
               </ul>
             </div>
           </li>
@@ -54,7 +55,9 @@
           </li>
           <li>
             <i class="bi bi-percent"></i
-            ><a href="#calc-angles">Zamiana miar kątowych</a>
+            ><a href="/surveyorDesk/pages/angles-calc.html"
+              >Zamiana miar kątowych</a
+            >
           </li>
           <li>
             <i class="bi bi-bullseye"></i><a href="#points">Baza punktów</a>
