--- a/pages/azimuth.html
+++ b/pages/azimuth.html
@@ -43,8 +43,9 @@
                 <a href="/surveyorDesk/pages/azimuth.html"
                   ><li>Azymut na podstawie dwóch punktów</li></a
                 >
-                <a href="#"><li>Długość odcinka ze współrzędnych</li></a>
-                <a href="#"><li>Kąt poziomy ze współrzędnych</li></a>
+                <a href="distance.html"
+                  ><li>Długość odcinka ze współrzędnych</li></a
+                >
               </ul>
             </div>
           </li>
@@ -54,7 +55,9 @@
           </li>
           <li>
             <i class="bi bi-percent"></i
-            ><a href="#calc-angles">Zamiana miar kątowych</a>
+            ><a href="/surveyorDesk/pages/angles-calc.html"
+              >Zamiana miar kątowych</a
+            >
           </li>
           <li>
             <i class="bi bi-bullseye"></i><a href="#points">Baza punktów</a>
@@ -66,9 +69,27 @@
         </ul>
       </nav>
       <div class="display-area">
-        <section id="about-project">
-          <h2>Witaj w aplikacji Surveyor Desk</h2>
-          <p>Tekst o aplikacji, czym jest, dlaczego ją stworzyłem.</p>
+        <section id="azimuth">
+          <h2>Azymut na podstawie dwóch punktów</h2>
+          <div class="points-details">
+            <div class="first-point-details">
+              <label for="point-name">Nazwa punktu A</label
+              ><input type="number" id="point-name" />
+              <label for="x-cord">Współrzędna X</label
+              ><input type="number" id="x-cord" />
+              <label for="y-cord">Współrzędna Y</label
+              ><input type="number" id="y-cord" />
+            </div>
+            <div class="second-point-details">
+              <label for="point-name">Nazwa punktu B</label
+              ><input type="number" id="point-name" />
+              <label for="x-cord">Współrzędna X</label
+              ><input type="number" id="x-cord" />
+              <label for="y-cord">Współrzędna Y</label
+              ><input type="number" id="y-cord" />
+            </div>
+          </div>
+          <button>OBLICZ</button>
         </section>
       </div>
     </div>
