--- a/pages/distance.html
+++ b/pages/distance.html
@@ -16,11 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
-    <script
-      src="/surveyorDesk/scripts/clickHandlers.js"
-      type="module"
-      defer
-    ></script>
+    <script src="/surveyorDesk/scripts/menu.js" type="module" defer></script>
   </head>
   <body>
     <header id="top-bar">
@@ -43,7 +39,7 @@
                 <a href="/surveyorDesk/pages/azimuth.html"
                   ><li>Azymut na podstawie dwóch punktów</li></a
                 >
-                <a href="distance.html"
+                <a href="/surveyorDesk/pages/distance.html"
                   ><li>Długość odcinka ze współrzędnych</li></a
                 >
               </ul>
@@ -60,7 +56,8 @@
             >
           </li>
           <li>
-            <i class="bi bi-bullseye"></i><a href="#points">Baza punktów</a>
+            <i class="bi bi-bullseye"></i
+            ><a href="/surveyorDesk/pages/points-base.html">Baza punktów</a>
           </li>
           <li>
             <i class="bi bi-plus"></i
