--- a/pages/points-base.html
+++ b/pages/points-base.html
@@ -17,6 +17,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
     <script src="/surveyorDesk/scripts/menu.js" type="module" defer></script>
+    <script src="/surveyorDesk/scripts/pointsBase.js" defer></script>
   </head>
   <body>
     <header id="top-bar">
@@ -66,27 +67,24 @@
         </ul>
       </nav>
       <div class="display-area">
-        <section id="azimuth">
-          <h2>Azymut na podstawie dwóch punktów</h2>
-          <div class="points-details">
-            <div class="first-point-details">
-              <label for="point-name">Nazwa punktu A</label
-              ><input type="number" id="point-name" />
-              <label for="x-cord">Współrzędna X</label
-              ><input type="number" id="x-cord" />
-              <label for="y-cord">Współrzędna Y</label
-              ><input type="number" id="y-cord" />
-            </div>
-            <div class="second-point-details">
-              <label for="point-name">Nazwa punktu B</label
-              ><input type="number" id="point-name" />
-              <label for="x-cord">Współrzędna X</label
-              ><input type="number" id="x-cord" />
-              <label for="y-cord">Współrzędna Y</label
-              ><input type="number" id="y-cord" />
-            </div>
+        <h2 id="points-base-header">Baza punktów</h2>
+        <section id="points-base">
+          <div class="points-list">
+            <table id="point-table">
+              <tr>
+                <th>Nazwa punktu</th>
+                <th>Współrzędna X</th>
+                <th>Współrzędna Y</th>
+              </tr>
+            </table>
+            <template id="point-template">
+              <tr id="new-point">
+                <td id="point-name"></td>
+                <td id="coord-x"></td>
+                <td id="coord-y"></td>
+              </tr>
+            </template>
           </div>
-          <button>OBLICZ</button>
         </section>
       </div>
     </div>
