--- a/pages/azimuth.html
+++ b/pages/azimuth.html
@@ -16,7 +16,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
-    <script src="/surveyorDesk/scripts/menu.js" type="module" defer></script>
+    <script src="/surveyorDesk/scripts/menu.js" defer></script>
+    <script src="/surveyorDesk/scripts/calculation.js" defer></script>
   </head>
   <body>
     <header id="top-bar">
@@ -73,20 +74,20 @@
               <label for="point-name">Nazwa punktu A</label
               ><input type="number" id="point-name" />
               <label for="x-cord">Współrzędna X</label
-              ><input type="number" id="x-cord" />
+              ><input type="number" id="x-coord" />
               <label for="y-cord">Współrzędna Y</label
-              ><input type="number" id="y-cord" />
+              ><input type="number" id="y-coord" />
             </div>
             <div class="second-point-details">
               <label for="point-name">Nazwa punktu B</label
               ><input type="number" id="point-name" />
               <label for="x-cord">Współrzędna X</label
-              ><input type="number" id="x-cord" />
+              ><input type="number" id="x-coord" />
               <label for="y-cord">Współrzędna Y</label
-              ><input type="number" id="y-cord" />
+              ><input type="number" id="y-coord" />
             </div>
           </div>
-          <button>OBLICZ</button>
+          <button id="azimuth">OBLICZ</button>
         </section>
       </div>
     </div>
