--- a/pages/azimuth.html
+++ b/pages/azimuth.html
@@ -48,7 +48,9 @@
           </li>
           <li>
             <i class="bi bi-columns"></i
-            ><a href="#transformation">Transformacja układów</a>
+            ><a href="/surveyorDesk/pages/transformation.html"
+              >Transformacja układów</a
+            >
           </li>
           <li>
             <i class="bi bi-percent"></i
