Changed menu links to relative.

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </div>
             <div class="item-content">
               <ul class="calc-list">
-                <a href="/surveyorDesk/pages/azimuth.html"
+                <a href="pages/azimuth.html"
                   ><li>Azymut na podstawie dwóch punktów</li></a
                 >
-                <a href="/surveyorDesk/pages/distance.html"
+                <a href="pages/distance.html"
                   ><li>Długość odcinka ze współrzędnych</li></a
                 >
               </ul>
@@ -46,21 +46,19 @@
           </li>
           <li>
             <i class="bi bi-columns"></i
-            ><a href="#transformation">Transformacja układów</a>
+            ><a href="pages/transformation.html">Transformacja układów</a>
           </li>
           <li>
             <i class="bi bi-percent"></i
-            ><a href="/surveyorDesk/pages/angles-calc.html"
-              >Zamiana miar kątowych</a
-            >
+            ><a href="pages/angles-calc.html">Zamiana miar kątowych</a>
           </li>
           <li>
             <i class="bi bi-bullseye"></i
-            ><a href="/surveyorDesk/pages/points-base.html">Baza punktów</a>
+            ><a href="pages/points-base.html">Baza punktów</a>
           </li>
           <li>
             <i class="bi bi-plus"></i
-            ><a href="/surveyorDesk/pages/add-point.html">Dodaj punkt</a>
+            ><a href="pages/add-point.html">Dodaj punkt</a>
           </li>
         </ul>
       </nav>
