--- a/pages/transformation.html
+++ b/pages/transformation.html
@@ -22,8 +22,7 @@
   <body>
     <header id="top-bar">
       <h1>
-        <i class="bi bi-compass"></i
-        ><a href="/surveyorDesk/index.html">Surveyor Desk</a>
+        <i class="bi bi-compass"></i><a href="../index.html">Surveyor Desk</a>
       </h1>
     </header>
     <div id="content-wrapper">
@@ -37,10 +36,10 @@
             </div>
             <div class="item-content">
               <ul class="calc-list">
-                <a href="/surveyorDesk/pages/azimuth.html"
+                <a href="azimuth.html"
                   ><li>Azymut na podstawie dwóch punktów</li></a
                 >
-                <a href="/surveyorDesk/pages/distance.html"
+                <a href="distance.html"
                   ><li>Długość odcinka ze współrzędnych</li></a
                 >
               </ul>
@@ -48,23 +47,18 @@
           </li>
           <li>
             <i class="bi bi-columns"></i
-            ><a href="/surveyorDesk/pages/transformation.html"
-              >Transformacja układów</a
-            >
+            ><a href="transformation.html">Transformacja układów</a>
           </li>
           <li>
             <i class="bi bi-percent"></i
-            ><a href="/surveyorDesk/pages/angles-calc.html"
-              >Zamiana miar kątowych</a
-            >
+            ><a href="angles-calc.html">Zamiana miar kątowych</a>
           </li>
           <li>
             <i class="bi bi-bullseye"></i
-            ><a href="/surveyorDesk/pages/points-base.html">Baza punktów</a>
+            ><a href="points-base.html">Baza punktów</a>
           </li>
           <li>
-            <i class="bi bi-plus"></i
-            ><a href="/surveyorDesk/pages/add-point.html">Dodaj punkt</a>
+            <i class="bi bi-plus"></i><a href="add-point.html">Dodaj punkt</a>
           </li>
         </ul>
       </nav>
