--- a/pages/angles-calc.html
+++ b/pages/angles-calc.html
@@ -16,8 +16,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
-    <script src="/surveyorDesk/scripts/menu.js" type="module" defer></script>
-    <script src="/surveyorDesk/scripts/anglesCalc.js" defer></script>
+    <script src="../scripts/menu.js" type="module" defer></script>
+    <script src="../scripts/anglesCalc.js" defer></script>
   </head>
   <body>
     <header id="top-bar">
