Fixed inputs type

--- a/pages/add-point.html
+++ b/pages/add-point.html
@@ -69,9 +69,9 @@
             <label for="point-name">Nazwa punktu</label
             ><input type="text" id="point-name" />
             <label for="coord-x">Współrzędna X</label
-            ><input type="text" id="coord-x" />
+            ><input type="number" id="coord-x" />
             <label for="coord-y">Współrzędna Y</label
-            ><input type="text" id="coord-y" />
+            ><input type="number" id="coord-y" />
             <button id="add-point-btn">DODAJ PUNKT DO BAZY</button>
           </div>
         </section>
