--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="display-area">
         <section id="about-project">
           <h2>Witaj w aplikacji Surveyor Desk</h2>
-          <p>Tekst o aplikacji, czym jest, dlaczego ją stworzyłem.</p>
+          <p>Ta sekcja zostanie uzupełniona wkrótce...</p>
         </section>
       </div>
     </div>
